# responsive-webpage-template

./: LICENSE  README.md  apps.md  index.html
.github/: workflow_state.json
.github/scripts/: generate_app_list.py  generate_apps_json.py
.github/workflows/: deploy-app-reusable.yml  deploy-todo-app.yml  dynamic-deploy.yml  heroku-deploy.yml  utils-1.yml
express/: package.json  server.js)
express/public/: index.html  script.js  snapshot.md  style.css
express/public/to_do_list/: README.md  index.html  script.js  server.js
homepage-app/: Procfile  README.md  index.html  package.json  script.js  server.js  style.css
homepage-app/APMEnergyTracker/: local.properties  settings.gradle.kts
homepage-app/APMEnergyTracker/mobile/: build.gradle.kts
homepage-app/APMEnergyTracker/mobile/src/main/: AndroidManifest.xml
homepage-app/APMEnergyTracker/mobile/src/main/cpp/: CMakeLists.txt  native-lib.cpp
homepage-app/APMEnergyTracker/mobile/src/main/java/com/eeshvardasikcm/apmenergytracker/: EnergyComplicationService.kt  EnergyRepository.kt  EnergyTileService.kt  MainActivity.kt
homepage-app/APMEnergyTracker/mobile/src/main/res/values/: strings.xml  themes.xml
homepage-app/APMEnergyTracker/mobile/src/main/res/values-night/: themes.xml
homepage-app/APMEnergyTracker/wear/: build.gradle.kts
homepage-app/APMEnergyTracker/wear/src/main/java/com/eeshvardasikcm/apmenergytracker/complication/: MainComplicationService.kt
homepage-app/APMEnergyTracker/wear/src/main/java/com/eeshvardasikcm/apmenergytracker/presentation/: MainActivity.kt
homepage-app/APMEnergyTracker/wear/src/main/java/com/eeshvardasikcm/apmenergytracker/presentation/theme/: Theme.kt
homepage-app/APMEnergyTracker/wear/src/main/java/com/eeshvardasikcm/apmenergytracker/tile/: MainTileService.kt
homepage-app/APMEnergyTracker/wear/src/main/res/values/: strings.xml
homepage-app/AdvocacyOS/: AdvocacyOSDatabaseSchema.dart  CONTRIBUTING_SETUP.md  CapabilityEngine.md  CapabilityEngineDoc.dart  CapabilityEngineWireframeDoc.dart  ContributorGuide.dart  Energ-yLedger_-_UI_UX_Wireframes_(Phase 2)_Aug_30_12:49_PM.md  HolisticEnergyLedgerDoc.dart  README.dart  README.md  WireframesCapabilityEngine.md  ai_driven_rd_framework.dart
homepage-app/AdvocacyOS/Energy Ledger - UI/: UX_Wireframes_(Phase 2)_Aug_30_12:49_PM.md
homepage-app/AdvocacyOS/flutter/: adaptive_agenda_screen.dart  ai_service.dart  energy_ledger_screen.dart  firestore_service.dart  main.dart  pubspec.yaml
homepage-app/DataEssentials/CSVPrep/: CSVPrep.cpp  pch.h
homepage-app/DataEssentials/DataEssentials/: DataEssentials.cpp
homepage-app/DataEssentials/Pathfinder/: Pathfinder.cpp  Pathfinder_Interface.h  pch.h
homepage-app/DataEssentials/WinAPILib/: CSVPrep_Interface.h  WinAPILib.cpp  WinAPILib.h  pch.h
homepage-app/DataEssentialsUI/: DataEssentialsUI.sln  DataEssentialsUI.uproject  RuntimeLevelManager.cpp  RuntimeLevelManager.h
homepage-app/DataEssentialsUI/Content/: L_BlankLevelTemplate.umap
homepage-app/DataEssentialsUI/Source/: DataEssentialsUI.Target.cs  DataEssentialsUIEditor.Target.cs
homepage-app/DataEssentialsUI/Source/DataEssentialsUI/: DataEssentialsUI.Build.cs  DataEssentialsUI.cpp
homepage-app/apps/: apps-list.html  apps-list.js  apps.json  homepage-app-index-html
homepage-app/to_do_list/: LICENSE  README.md  index.html  package.json  script.js  server.js  style.css
homepage-app/unofficial-fan-videogame-baseball-club/: CMakeLists.txt  README.md
homepage-app/unofficial-fan-videogame-baseball-club-main/: CMakeLists.txt  NOTICE  README.md  main.cpp  orchestrator.cpp  orchestrator.h  schedule_report(v3.5.0).md  schedule_report.md  schedule_report_v3.7.0.md  schedule_report_v3.7.md  schedule_report_v3.8.md  schedule_report_v3.9.md
homepage-app/unofficial-fan-videogame-baseball-club-main/money_and_players/: CMakeLists.txt  days.cpp  days.h  environmental_agent.cpp  environmental_agent.h  financial_agent.cpp  financial_agent.h  game_data.h  game_sorter.cpp  game_sorter.h  geography_data.h:  i_schedule_manager.h  league_scheduler_2.cpp  league_scheduler_2.h  league_state.h  money_and_players.cpp  persistence_agent.cpp  persistence_agent.h  player_data.h  report_logic.cpp  report_logic.h  team_data.h  trade_agent.cpp  trade_agent.h
homepage-app/unofficial-fan-videogame-baseball-club-main/money_and_players/first-baseman/: X3Agent.h
homepage-app/unofficial-fan-videogame-baseball-club-main/money_and_players/scheduling/: CMakeLists.txt  league_scheduler_2.cpp  league_scheduler_2.h
homepage-app/unofficial-fan-videogame-baseball-club-main/scheduling/: CMakeLists.txt  league_scheduler_2.cpp  league_scheduler_2.h
homepage-app/unofficial-fan-videogame-baseball-club-main/scheduling/archived/: league_scheduler.cpp
homepage-app/unofficial-fan-videogame-baseball-club/money_and_players/: game_data.h
homepage-app/unofficial-fan-videogame-baseball-club/scheduling/: league_scheduler_2.h
unofficial-fan-videogame-baseball-club/: main.cpp
